feat: add AI-assisted NDC fallback from local dataset

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"@sveltejs/kit": "^2.48.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/typography": "^0.5.19",
+		"@types/node": "^24.10.0",
 		"@vitest/ui": "^4.0.8",
+		"adm-zip": "^0.5.16",
 		"autoprefixer": "^10.4.21",
 		"jsdom": "^27.1.0",
 		"msw": "^2.12.1",
